# school-hub

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  clean.py  main.py  poc.py  pyproject.toml  rxconfig.py  wew.txt
doc/: architecture-diagrams.md  guide-spec-lean.md  oceny.html  project-plan.md  settings-specification.md  specification.md  terminarz.html  usecases.md
doc/.templates/: SYSTEM_PROMPT-diagram.md  SYSTEM_PROMPT.md  tpl-adr.md  tpl-component-card.md  tpl-execution-plan.md  tpl-feature-spec.md  tpl-reference-contract.md  tpl-start-here.md
doc/rules/: 00-instruct.md  developer-agile-TDD.md  developer-reflex.md  tester-playwright.md  tester-ut.md
school_hub/: models.py  school_hub.py  state.py
school_hub/components/: __init__.py  navigation.py  views.py
school_hub/services/: __init__.py  connection_tester.py  credential_manager.py  librus_scraper.py  mock_service.py
tests/: conftest.py  test_connection_tester.py  test_edit_profile.py  test_settings_ui.py  test_sprint1_domain.py  test_sprint2_navigation.py  test_sprint3_feed.py  test_sprint3_feed_ui.py  test_sprint4_calendar.py  test_sprint5_profiles.py  test_sprint6_scrapers.py
tests/mock_data/: oceny-golden.txt  oceny.html
