[project]
name = "school-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "reflex>=0.8.28.post1",
]

[tool.setuptools]
packages = ["school_hub"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]
